--- a/SmartHome/software/infra/cmn/logging/Makefile
+++ b/SmartHome/software/infra/cmn/logging/Makefile
@@ -1,15 +1,9 @@
 LDFLAG = -shared
-LIBS = -llogging 
+LIBS = 
 EXECUTABLE_NAME =
-LIBRARY_NAME = libcomm_mgr.so
+LIBRARY_NAME = liblogging.so
 
 all: $(LIBRARY_NAME)
-
-#ifeq ($(CC), gcc -DTEST_COMM_MGR_LIB)
-SUBDIRS = \
-	test_comm_mgr_lib \
-
-#endif
 
 # Include Common Makefile
 -include ${MAKE_UTILS_DIR}/Makefile.include
@@ -23,7 +17,7 @@ CFLAG = -o
 LIBFLAG = -fPIC
 
 $(LIBRARY_NAME):$(C_OBJECTS)
-	$(CC) $(C_OBJECTS) $(LDFLAG) $(LDFLAGS) $(CFLAG) $(LIB_DIR)/$(LIBRARY_NAME) $(LIBS) 
+	$(CC) $(C_OBJECTS) $(LDFLAG) $(CFLAG) $(LIB_DIR)/$(LIBRARY_NAME) 
 
 %.o: %.c
 	$(CC) $(CFLAGS) $(LIBFLAG) $(INCLUDE) -c $< -o $@
