- In this commit, added the cmn/utils. Added shared object support. Tested

--- a/SmartHome/software/infra/CMakeLists.txt
+++ b/SmartHome/software/infra/CMakeLists.txt
@@ -1,5 +1,6 @@
 # include the common header files applicable for entire /infra
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/system_manager")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/comm_manager")
 
 
 add_subdirectory (cmn)
