--- a/SmartHome/software/infra/system_manager/CMakeLists.txt
+++ b/SmartHome/software/infra/system_manager/CMakeLists.txt
@@ -7,7 +7,8 @@ set(LIBRARY_LIST "logging")
 # Set the source files required
 set (SOURCE_FILE_LIST "main.c"
                       "system_mgr.c"
-                      "system_mgr_client_tbl.c")
+                      "system_mgr_client_tbl.c"
+                      "system_mgr_enums_defs.c")
 
 # Generate the executable
 add_executable (${EXECUTABLE_NAME} ${SOURCE_FILE_LIST})
