--- a/SmartHome/software/infra/cmn/utils/CMakeLists.txt
+++ b/SmartHome/software/infra/cmn/utils/CMakeLists.txt
@@ -1,15 +1,14 @@
 #Set the name of the executable
-set (LIB_NAME "comm_mgr") 
+set (LIB_NAME "utils") 
 
 # Select whether to generate shared or static library @params: ON OFF
-set (GENERATE_SHARED_LIB ON)
+#set (GENERATE_SHARED_LIB ON)
 
 # Set the static and shared libraries on which the executable is dependent
-set(LIBRARY_LIST "logging")
+set(LIBRARY_LIST "logging")                 
 
 # Set the source files required
-set (SOURCE_FILE_LIST "comm_mgr_lib.c"
-                      "comm_mgr_lib_enums_defs.c")
+set (SOURCE_FILE_LIST "shared_mem.c")
 
 # Generate the library
 if(GENERATE_SHARED_LIB)
@@ -22,7 +21,7 @@ endif(GENERATE_SHARED_LIB)
 target_link_libraries (${LIB_NAME} LINK_PUBLIC "${LIBRARY_LIST}")
 
 # Add the sub-directories, if any present
-add_subdirectory (test_comm_mgr_lib)
+#add_subdirectory ()
 
 # Make sure the compiler can find include files for our library
 target_include_directories (${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
