- Updated the sys manager. Functionality wise no change. - Tested that comm_manager still works if invoked from sys_manager with mutiple clients

--- a/SmartHome/software/infra/CMakeLists.txt
+++ b/SmartHome/software/infra/CMakeLists.txt
@@ -1,7 +1,7 @@
 # include the common header files applicable for entire /infra
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/system_manager")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/comm_manager")
-
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/cmn")
 
 add_subdirectory (cmn)
 add_subdirectory (app_manager)
