--- a/SmartHome/software/infra/system_manager/CMakeLists.txt
+++ b/SmartHome/software/infra/system_manager/CMakeLists.txt
@@ -2,7 +2,8 @@
 set (EXECUTABLE_NAME "system_manager") 
 
 # Set the static and shared libraries on which the executable is dependent
-set(LIBRARY_LIST "logging")
+set(LIBRARY_LIST "logging"
+                 "utils")
 
 # Set the source files required
 set (SOURCE_FILE_LIST "main.c"
