- Added taskhandler and datastructures (queues) libary in cmn/utils (Tested)

--- a/SmartHome/software/infra/cmn/utils/CMakeLists.txt
+++ b/SmartHome/software/infra/cmn/utils/CMakeLists.txt
@@ -6,10 +6,13 @@ set (LIB_NAME "utils")
 
 # Set the static and shared libraries on which the executable is dependent
 set(LIBRARY_LIST "logging"
-                 "rt") # -lrt is required for shm                 
+                 "rt"   # -lrt is required for shm
+                 "pthread") # -lpthread is required for task handler                 
 
 # Set the source files required
-set (SOURCE_FILE_LIST "shared_mem.c")
+set (SOURCE_FILE_LIST "shared_mem.c"
+                      "taskhandler.c"
+                      "data_structures.c")
 
 # Generate the library
 if(GENERATE_SHARED_LIB)
@@ -25,5 +28,9 @@ target_link_libraries (${LIB_NAME} LINK_PUBLIC "${LIBRARY_LIST}")
 target_include_directories (${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add the sub-directories, if any present
-add_subdirectory (shared_mem_test)
+if(EnableTestCode)
+    add_subdirectory (shared_mem_test)
+    add_subdirectory (taskhandler_test)
+    add_subdirectory (datastructures_test)
+endif()    
 
