- Intermediate commit. Not compiled. Adding new capabilities for Communication Manager. - Adding shell program

--- a/SmartHome/software/apps/shell/CMakeLists.txt
+++ b/SmartHome/software/apps/shell/CMakeLists.txt
@@ -1,6 +1,9 @@
 #Set the name of the executable
 set (EXECUTABLE_NAME "shell") 
 
+# include the cli directory where we can find the auto-generated cli files
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/cli")
+
 # Set the static and shared libraries on which the executable is dependent
 set(LIBRARY_LIST "logging"
                  "utils"
@@ -8,7 +11,9 @@ set(LIBRARY_LIST "logging"
 
 # Set the source files required
 set (SOURCE_FILE_LIST "shell.c"
-                      "shell_workers.c")
+                      "shell_workers.c"
+                      "shell_cli.c")
+
 
 # Generate the executable
 add_executable (${EXECUTABLE_NAME} ${SOURCE_FILE_LIST})
