Added macros to generate files and folders for any module in the system

--- a/SmartHome/software/infra/CMakeLists.txt
+++ b/SmartHome/software/infra/CMakeLists.txt
@@ -1,6 +1,7 @@
 # include the common header files applicable for entire /infra
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/system_manager")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/comm_manager")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/interface_manager")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/cmn")
 
 add_subdirectory (cmn)
@@ -8,5 +9,6 @@ add_subdirectory (app_manager)
 #add_subdirectory (database_manager)
 add_subdirectory (system_manager)
 add_subdirectory (comm_manager)
+add_subdirectory (interface_manager)
 #add_subdirectory (users_manager)
 
