--- a/SmartHome/software/infra/cmn/utils/utils_cpp/CMakeLists.txt
+++ b/SmartHome/software/infra/cmn/utils/utils_cpp/CMakeLists.txt
@@ -1,22 +1,15 @@
 #Set the name of the executable
-set (LIB_NAME "utils") 
+set (LIB_NAME "utils_cpp") 
 
 # Select whether to generate shared or static library @params: ON OFF
 set (GENERATE_SHARED_LIB ON)
 
 # Set the static and shared libraries on which the executable is dependent
-set(LIBRARY_LIST "logging"
-                 "rt"   # -lrt is required for shm
-                 "pthread" # -lpthread is required for task handler
-                 "utils_cpp") 
+set(LIBRARY_LIST "logging")
 
 # Set the source files required
-set (SOURCE_FILE_LIST "shared_mem.c"
-                      "taskhandler.c"
-                      "data_structures.c"
-                      "data_structures_queue.c"
-                      "data_structures_list.c"
-                      "data_structures_hash.c")
+set (SOURCE_FILE_LIST "__data_structures_queue.cpp"
+                      "__data_structures_hash.cpp")
 
 # Generate the library
 if(GENERATE_SHARED_LIB)
@@ -32,12 +25,7 @@ target_link_libraries (${LIB_NAME} LINK_PUBLIC "${LIBRARY_LIST}")
 target_include_directories (${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add the sub-directories, if any present
-add_subdirectory(utils_cpp)
-
-# Add the sub-directories, if any present
 if(EnableTestCode)
-    add_subdirectory (shared_mem_test)
-    add_subdirectory (taskhandler_test)
-    add_subdirectory (datastructures_test)
+    #add_subdirectory (datastructures_test)
 endif()    
 
